# PerceptualInterdependence

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  main.py  pyproject.toml  requirements.txt  results_real_analysis.csv  setup.py
.kiro/specs/geometry-aware-photometric-binding/: design.md  requirements.md  tasks.md
.kiro/specs/render-validation-system/: design.md  requirements.md  tasks.md
.kiro/specs/rgb-forensics-traitor-tracing/: design.md  requirements.md  tasks.md
core/: __init__.py  asset_binder_complex.py  render_simulator.py  rgb_forensics.py
docs/: PROJECT_STRUCTURE.md
docs/algorithms/: cpu_optimization.md  mathematics.md  validation.md  visualization.md
docs/api/: asset_binder.md  chart_generator.md  cpu_math.md  validation.md
docs/cli/: commands.md
docs/tutorials/: advanced_binding.md  chart_generation.md  getting_started.md  performance.md  research.md
experiments/: __init__.py  research_orchestrator.py  run_paper_experiment.py
scripts/: calibration_test.py  download_pbr_dataset.py  run_real_analysis.py  verify_installation.py
src/perceptual_interdependence/: __init__.py
src/perceptual_interdependence/algorithms/: __init__.py  cpu_math.py
src/perceptual_interdependence/cli/: __init__.py  main.py
src/perceptual_interdependence/core/: __init__.py  asset_binder.py  forensics.py
src/perceptual_interdependence/gui/: __init__.py  streamlit_app.py
src/perceptual_interdependence/utils/: __init__.py  chart_generator.py  texture_processing.py  validation.py
tests/: __init__.py
tests/unit/: test_asset_binder.py  test_cpu_math.py
utils/: __init__.py  debug_math.py  demo_pipeline.py  diagnose_math_logic.py  diagnostic_render.py  direct_binder_test.py  example_usage.py  final_verification.py  process_raw_assets.py  result_chart_generator.py  test_strong_poison.py  texture_generator.py  trace_z_calculation.py  verify_mechanism.py  verify_real_texture.py
